--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".HostActivity"
+            android:exported="false" />
+        <service
+            android:name=".VideoSyncHostService"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 
 </manifest>
